<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_person"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context="com.sdsu.deepak.homework2.PersonActivity">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <EditText android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:nextFocusForward="@+id/family_name"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapSentences"
            android:hint="@string/first_name"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <EditText android:id="@+id/family_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapSentences"
            android:hint="@string/family_name"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <EditText android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusForward="@+id/email"
            android:inputType="numberDecimal"
            android:hint="@string/age"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <EditText android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusForward="@+id/phone"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <EditText android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:nextFocusForward="@+id/birthday_button"
            android:hint="@string/phone"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="8dp">
            <EditText android:id="@+id/birthday"
                android:layout_width="250dp"
                android:focusable="false"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/birthday"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:id="@+id/birthday_button"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:background="@color/button"
            android:layout_marginTop="16dp"
            android:text="@string/set"
            android:nextFocusForward="@+id/country_select_button"/>
    </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="8dp">
        <EditText android:id="@+id/country"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text|textCapSentences"
            android:focusable="false"
            android:hint="@string/country"/>
        </android.support.design.widget.TextInputLayout>
       <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textStyle="bold"
           android:textColor="@color/text"
            android:background="@color/button"
            android:id="@+id/country_select_button"
            android:layout_marginTop="16dp"
            android:text="@string/set" />
   </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/colorAccent"
        android:id="@+id/confirm"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:background="@color/button"
        android:text="@string/done"/>
</LinearLayout>
